<resources>
    <string name="app_name">BookWormV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BookWorm</string>
    <string name="nav_header_subtitle">Por: Daniel Medina Alcolea</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_buscar">Buscar Libros</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_mostrarLibro">Mostrar Libro</string>
    <string name="menu_resenasLibro">Dejar Reseña</string>+
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_cambio">Cambio de Información</string>
    <string name="productos_carrito">Productos del Pedido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="menu_recibidos">Pedidos Recibidos</string>
    <string name="menu_gestion">Gestionar Libros</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
    <string name="menu_editar">Datos Libro</string>
    <string name="title_activity_main3">MainActivity3</string>

    <string name="menu_admin_empresas">Administrar Empresas</string>
    <string name="menu_administrar_empresas">Empresas</string>
    <string name="menu_admin_usuarios">Administrar Usuarios</string>
    <string name="menu_admin_cerrar">Cerrar Sesion</string>
</resources>