<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="es.riberadeltajo.bookwormv2.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_buscar"
        android:name="es.riberadeltajo.bookwormv2.ui.buscarlibros.BuscarFragment"
        android:label="@string/menu_buscar"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="es.riberadeltajo.bookwormv2.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="es.riberadeltajo.bookwormv2.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_slideshow" />
</navigation>